# threat-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  url_model.pkl  vectorizer.pkl
app/: __init__.py  routes.py
cybershield_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dataset/: urls.csv
static/: style.css
templates/: dashboard.html  history.html  index.html  result.html
tests/: test_app.py
