[project]
name = "cybershield-ai"
version = "0.1.0"
description = "Threat detector web app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Werkzeug==3.0.1",
    "SQLAlchemy==2.0.23",
    "requests==2.31.0",
    "scikit-learn==1.2.2",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "validators==0.22.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "run:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["dataset*", "static*", "templates*"]
