[project]
name = "cybershield-ai"
version = "0.1.0"
description = "Threat detector web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Login==0.6.3",
    "Werkzeug==3.0.3",
    "SQLAlchemy==2.0.36",
    "requests==2.32.3",
    "scikit-learn==1.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "validators==0.22.0",
    "python-dotenv==1.0.0",
    "pytest==8.3.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "run:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["dataset*", "static*", "templates*"]
